--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^7.0.0-beta.3",
     "babel-jest": "^29.7.0",
     "babel-preset-env": "^7.0.0-beta.3",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "eslint": "^8.53.0"
   }
 }
