--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Frontend des Projekts ReciPlease",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "repository": {
     "type": "git",
@@ -20,7 +24,10 @@
     "babel-core": "^7.0.0-beta.3",
     "babel-jest": "^29.7.0",
     "babel-preset-env": "^7.0.0-beta.3",
-    "jest": "^29.7.0",
-    "eslint": "^8.53.0"
+    "eslint": "^8.53.0",
+    "jest": "^29.7.0"
+  },
+  "devDependencies": {
+    "@vue/cli-service": "^5.0.8"
   }
 }
