--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
@@ -21,11 +20,13 @@
   "author": "Ercan Kurt, Mete Han Kazancioglu",
   "license": "ISC",
   "dependencies": {
+    "@vue/compiler-sfc": "^3.3.8",
     "babel-core": "^7.0.0-beta.3",
     "babel-jest": "^29.7.0",
     "babel-preset-env": "^7.0.0-beta.3",
     "eslint": "^8.53.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "vue-template-compiler": "^2.7.15"
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.8"
