--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@vue/compiler-sfc": "^3.3.8",
+    "axios": "^1.6.2",
     "babel-core": "^7.0.0-beta.3",
     "babel-jest": "^29.7.0",
     "babel-preset-env": "^7.0.0-beta.3",
