--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-core": "^7.0.0-beta.3",
     "babel-jest": "^29.7.0",
     "babel-preset-env": "^7.0.0-beta.3",
+    "bootstrap-icons": "^1.11.2",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "vue-template-compiler": "^2.7.15"
