--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     "@vue/compiler-sfc": "^3.3.8",
     "axios": "^1.6.2",
     "babel-core": "^7.0.0-beta.3",
-    "babel-jest": "^29.7.0",
     "babel-preset-env": "^7.0.0-beta.3",
     "bootstrap-icons": "^1.11.2",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
+    "vue": "^3.3.9",
     "vue-template-compiler": "^2.7.15"
   },
   "devDependencies": {
-    "@vue/cli-service": "^5.0.8"
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/vue3-jest": "^29.2.6",
+    "babel-jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
+    "vue-jest": "^3.0.7"
   }
 }
